--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
         "sass": "^1.20.1",
         "sass-loader": "7.*",
         "vue": "^2.5.17",
-        "vue-template-compiler": "^2.6.10"
+        "vue-template-compiler": "^2.6.11"
+    },
+    "dependencies": {
+        "datatables.net-bs4": "^1.10.20"
     }
 }
