--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
         "vue-template-compiler": "^2.6.11"
     },
     "dependencies": {
-        "datatables.net-bs4": "^1.10.20"
+        "datatables.net-bs4": "^1.10.20",
+        "select2": "^4.0.13",
+        "select2-theme-bootstrap4": "^0.2.0-beta.6"
     }
 }
